--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.5.2</version>
     </dependency>
+    <!-- hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.0.0.Final</version>
+    </dependency>
+
 
     <!-- 添加javassist -->
     <dependency>
